--- a/qs/SecKill/SecProxy/conf/app.conf
+++ b/qs/SecKill/SecProxy/conf/app.conf
@@ -1,15 +1,31 @@
-//  此配置文件有坑，编译时需在配置文件路径上层文件夹编译
+#  此配置文件有坑，编译时需在配置文件路径上层文件夹编译
 
-httpaddr = "192.168.1.101"
-httpport = "9092"
+# 若指定httpaddr则，bind: can't assign requested address
+httpaddr = "127.0.0.1"
+httpport = 9091
 appname = SecProxy
 
-runmode = "${ProRunMoed||dev}"
+runmode ="${ProRunMode||dev}"
 autorender=false
 
-[dev]
-redis_addr="192.168.1.101:6379"
+    [dev]
+;redis相关配置
+redis_addr=192.168.1.101:6379
+redis_max_idle = 64
+redis_max_active = 0
+redis_idle_timeout = 300
 
+;etcd相关配置
+etcd_addr=127.0.0.1:2379
+etcd_timeout=3
+; etcd_sec_key_prefix=/oldboy/backend/secskill
+; etcd_product_key=product
+; etcd_black_list_key = backlist
+
+;日志文件相关配置
+log_path=./logs/sec.log
+log_level = debug
 
 [prod]
-redis_addr="192.168.1.101:6379"
+redis_addr=192.168.14.200:6379
+etcd_addr=192.168.14.200:2379
