--- a/qs/SecKill/SecProxy/conf/app.conf
+++ b/qs/SecKill/SecProxy/conf/app.conf
@@ -18,9 +18,9 @@ redis_idle_timeout = 300
 ;etcd相关配置
 etcd_addr=127.0.0.1:2379
 etcd_timeout=3
-; etcd_sec_key_prefix=/oldboy/backend/secskill
-; etcd_product_key=product
-; etcd_black_list_key = backlist
+etcd_sec_key_prefix=/gq/qs/backend/secskill
+etcd_product_key=product
+etcd_black_list_key = backlist
 
 ;日志文件相关配置
 log_path=./logs/sec.log
